ISSUE #18 [client] collapse menu-items into a single sorted list of entries

--- a/packages/client/src/components/menu-items/style.css
+++ b/packages/client/src/components/menu-items/style.css
@@ -2,3 +2,19 @@
     display: flex;
     flex-direction: column;
 }
+
+.menu-items__entry {
+    display: flex;
+}
+
+.menu-items__entry:hover {
+    cursor: pointer;
+    background-color: gainsboro;
+}
+
+.menu-items__entry-time-label {
+    flex-basis: 80px;
+}
+.menu-items__entry-label {
+    flex-grow: 1;
+}
